[fix]: overflow 시 스크롤 위한 속성 지정

--- a/src/global.css
+++ b/src/global.css
@@ -28,5 +28,6 @@
     border: 1px solid #ddd;
     background-color: #fff;
     box-sizing: content-box;
+    overflow: auto;
   }
 }
